[package]
name = "walletos_build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
humantime = "2.1.0"
ignore = "0.4.18"
indicatif = "0.17.2"
is-terminal = "0.4.0"
linkme = "0.3.6"
num_cpus = "1.14.0"
serde = { version = "1.0.148", features = ["derive"] }
structopt = "0.3.26"
toml = "0.5.9"
walkdir = "2.3.2"

[workspace]
