[package]
name = "gentle"
version = "0.1.2"
edition = "2021"
authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
description = "The low-configuration build system that gets out of your way, like a gentleman."

[dependencies]
anyhow = "1.0.66"
blake3 = "1.3.3"
humantime = "2.1.0"
ignore = "0.4.18"
indicatif = "0.17.2"
is-terminal = "0.4.0"
linkme = "0.3.6"
num_cpus = "1.14.0"
serde = { version = "1.0.148", features = ["derive"] }
structopt = "0.3.26"
toml = "0.5.9"
vfs = "0.8.0"
walkdir = "2.3.2"

[dev-dependencies]
tempfile = "3.3.0"
